@@ -26,5 +26,6 @@ gboolean preferences_exist (void);
 void load_preferences (void);
 void set_version (void);
 void set_nickname (const gchar *nick);
+gchar *get_save_directory(void);
 
 #endif
